feat: add single player game API
